<?xml version="1.0"?>
<package>
  <name>pcl_utils</name>
  <version>0.0.1</version>
  <description>
    The pcl_utils metapackage
  </description>
  <maintainer email="dasanche@ing.uc3m.es"></maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
